--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "cors": "^2.8.4",
     "express": "^4.16.2",
     "firebase": "^4.10.1",
+    "moment": "^2.22.2",
     "rxjs": "^5.5.6",
     "typescript": "~2.5.3",
     "zone.js": "^0.8.19"
